Proyectos/proyecto2/k8s/grpc-depoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcdeployment
  namespace: so1p2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpcdeployment
  template:
    metadata:
      labels:
        app: grpcdeployment
    spec:
      containers:
      - name: grpc-server
        image: alex4191/proyecto2-grpc_server:v2.0
        ports:
        - containerPort: 3001
      - name: grpc-client
        image: alex4191/proyecto2-grpc_client:v1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grpcservice
  namespace: so1p2
spec:
  type: ClusterIP
  selector:
    app: grpcdeployment
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
